# Copyright (c) 2010 the LinBox group
# ========LICENCE========
# This file is part of the library LinBox.
#
# LinBox is free software: you can redistribute it and/or modify
# it under the terms of the  GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
# ========LICENCE========
#


EXTRA_DIST=\
	   aclocal-include.m4      \
	   ax_cxx_compile_stdcxx_11.m4 \
	   config-header.m4        \
	   debug.m4                \
	   expat-check.m4          \
	   fflas-ffpack-check.m4   \
	   givaro-check.m4         \
	   gmp-check.m4            \
	   iml-check.m4            \
	   lidia-check.m4          \
	   linbox-benchmark.m4     \
	   linbox-doc.m4           \
	   linbox-misc.m4          \
	   linbox-opt.m4           \
	   maple-check-version.mpl \
	   maple-check.m4          \
	   ntl-check.m4            \
	   saclib-check.m4         \
	   mpfr-check.m4           \
	   fplll-check.m4          \
	   m4rie-check.m4          \
	   m4ri-check.m4           \
	   sage-check.m4
