# Copyright (c) 2013 
# written by Brice Boyer (briceboyer) <boyer.brice@gmail.com>
# copied from fflas-ffpack by Clement Pernet
# adapted from LinBox configuration
#
# ========LICENCE========
# Copyright(c)'1994-2016 by The Givaro group
# This file is part of Givaro.
# Givaro is governed by the CeCILL-B license under French law
# and abiding by the rules of distribution of free software.
# see the COPYRIGHT file for more details.
# ========LICENCE========
#/


EXTRA_DIST=            \
       instrset.h      \
       instrset_detect.cpp
